tests/cases/compiler-development/artifact/errors/diagnostic-compact-enum-payload-ref.diagnostic
diagnostic error code=O0001 family=ownership message="compact enum payload reference binding for i32 is value-only; use a value pattern or an addressable aggregate enum payload" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-compact-enum-payload-ref.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-compact-enum-payload-ref.ari" bytes=132
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-compact-enum-payload-ref.ari" line=8 column=11 end_line=8 end_column=15 byte_start=98 byte_end=102 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-compact-enum-payload-ref.ari:8:11\n   |\n 8 |   let ref Some(value) = item;\n   |           ^^^^"
